--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
+    "bootstrap": "^4.2.1",
     "concurrently": "^4.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
