--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
+    "bootstrap": "^4.2.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.4.10",
