--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "bootstrap": "^4.2.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "material-ui": "^0.20.2",
     "mongoose": "^5.4.10",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "validator": "^10.11.0"
   }
 }
