--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.2.1",
     "connect-mongo": "^2.0.3",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
     "material-ui": "^0.20.2",
@@ -33,6 +33,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "session": "^0.1.0",
     "validator": "^10.11.0"
   }
 }
