--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "concurrently": "^4.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-landing-page": "^2.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.0-next.3e165448"
+    "react-scripts": "^2.1.5",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
