--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
     "@pusher/chatkit-client": "^1.3.2",
+    "@pusher/chatkit-server": "^1.0.6",
     "bootstrap": "^4.2.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
