Map is posting but currently lacks pin and/or directions

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react-google-maps": "^9.4.5",
     "react-landing-page": "^2.0.2",
     "session": "^0.1.0",
     "validator": "^10.11.0"
