--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.2.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-google-maps": "^9.4.5",
     "react-landing-page": "^2.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
