--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-landing-page": "^2.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "read-more-react": "^1.0.6",
     "styled-components": "^4.1.3"
   },
   "scripts": {
