added cosmetic changes to the chat

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.8.3",
     "react-google-maps": "^9.4.5",
     "react-landing-page": "^2.0.2",
+    "react-radio-buttons": "^1.2.2",
     "read-more-react": "^1.0.6",
     "session": "^0.1.0",
     "validator": "^10.11.0"
