ch ch ch changes

--- a/package.json
+++ b/package.json
@@ -25,21 +25,27 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.2.1",
+    "cheerio": "^1.0.0-rc.2",
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
     "material-ui": "^0.20.2",
+    "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "puppeteer": "^1.12.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-google-maps": "^9.4.5",
     "react-landing-page": "^2.0.2",
+    "react-moment": "^0.8.4",
     "react-radio-buttons": "^1.2.2",
     "read-more-react": "^1.0.6",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "session": "^0.1.0",
     "validator": "^10.11.0"
   }
